fix: alignment

--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -7,8 +7,8 @@
     --menuitemsActiveBg: rgba(0, 13, 61, 0.9);
     --menuitemsActiveText: #ffffff;
     --heading: #000;
-    --description: #666;
-    --listElements: #666;
+    --description: #474747;
+    --listElements: #373737;
     --formBg: #f5f5f5;
     --outputBg: #f5f5f5;
     --outputText: #000;
